--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,13 +1,14 @@
     <!DOCTYPE html>
     <html>
     <head>
-    <title>Bootstrap 101 Template</title>
+    <title>Linda Gennermann</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     </head>
     <body>
     <h1>Hello, world!</h1>
+    <p>Das ist meine erste eigene Homepage!</p>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     </body>
