--- a/index.html
+++ b/index.html
@@ -1,16 +1,170 @@
-    <!DOCTYPE html>
-    <html>
-    <head>
-    <title>Linda Gennermann</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    </head>
-    <body>
-    <h1>Hello, world!</h1>
-    <p>Das ist meine erste eigene Homepage!</p>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    </body>
-    </html>
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Hausaufgabe Kapitel 6</title>
+<link rel="stylesheet" type="text/css" href="developer/workspace/HA_Kap6/WebContent/style.css" media="screen"/>
+</head>
+<body>
+<h1>HTML-Elemente im Überblick</h1>
+<p>Nachfolgend werden alle 77 HTML-Elemente in einer Tabelle zusammengefasst dargestellt. 
+Für jedes HTML-Element wird eine Kurze Bescheibung gegeben. Des Weiteren wird
+für jedes Element unterschieden, ob es ein Inline- oder ein Blockelement ist und ob es 
+semantisch ist.</p>
+<div><img src="http://www.w3.org/Icons/valid-xhtml10"/>
+<img src="http://www.w3.org/Icons/valid-css2-blue"/></div>
+<div>
+<table>
+<tr><th>HTML-ELement</th>
+<th>Elementbeschreibung</th>
+<th>Elementart</th>
+<th>semantisch?</th>
+</tr>
+<tr><td>a</td>
+<td>Verweis (Hyperlink) und Anker für Verweise</td>
+<td>inline</td>
+<td>semantisch</td>
+</tr>
+<tr>
+<td>abbr</td>
+<td>Abkürzung</td>
+<td>inline</td>
+<td>semantisch</td></tr>
+<tr><td>acronym</td>
+<td>Akronym</td>
+<td>inline</td>
+<td>semantisch</td>
+</tr>
+<tr><td>adress</td><td>Kontaktangabe zum Autor eines Inhalts (Credits)</td><td>block</td>
+<td>semantisch</td></tr>
+<tr><td>area</td><td>Verweis-sensitiver Bereich in einer Image_Map-Grafik</td>
+<td>-</td><td>semantisch</td></tr>
+<tr><td>b</td><td>Stilistische Hervorhebung im Text (üblicherweise fett dargstellt)</td>
+<td>inline</td><td>nicht semantisch</td></tr>
+<tr><td>base</td><td>Basis_URLfür Referenzen</td>
+<td>headertag</td><td> nicht semantisch</td></tr>
+<tr><td>bdo</td><td>Richtungsänderung bei bidirektionalem Text</td>
+<td>inline</td><td> nicht semantisch</td></tr>
+<tr><td>big</td><td>Großschrift</td><td>inline</td><td>nicht semantisch</td></tr>
+<tr><td>blockquote</td><td>Zitat in Form eines eigenen Textabsatzes</td>
+<td>block</td><td>semantisch</td></tr>
+<tr><td>body</td><td>Inhaltsbereich eines HTML-Dokuments</td><td>Dokumentstrukturtag</td>
+<td>nicht semantisch</td></tr>
+<tr><td>br</td><td>erzwungener Zeilenumbruch an der betreffenden Stelle</td>
+<td>-</td><td>semantisch</td></tr>
+<tr><td>button</td><td>Schaltfläche in einem Formular</td>
+<td>inline</td><td> nicht semantisch</td></tr>
+<tr><td>caption</td><td>Tabellenüberschrift/-unterschrift</td>
+<td>-</td><td>semantisch</td></tr>
+<tr><td>cite</td><td>Zitat innerhalb eines Absatzes</td><td>inline</td>
+<td>semantisch</td></tr>
+<tr><td>code</td><td>Quelltext-Auszug innerhalb eines Absatzes</td>
+<td>block</td><td>semantisch</td></tr>
+<tr><td>col</td><td>Tabllenspalte</td><td>-</td>
+<td> nicht semantisch</td></tr>
+<tr><td>colgroup</td><td>Gruppe von Tabellenspalten</td><td>-</td>
+<td>nicht sematisch</td></tr>
+<tr><td>dd</td><td>Definition, Beschreibung, detailierter Inhalt in einem dt-Element</td>
+<td>block</td><td>semantisch</td></tr>
+<tr><td>del</td><td>gelöschter Inhalt (Änderungsmarkierung)</td>
+<td>-</td><td>semantisch</td></tr>
+<tr><td>dfn</td><td>Definition innerhalb eines Absatzes</td>
+<td>inline</td><td>semantisch</td></tr>
+<tr><td>div</td><td>Allgemeiner Bereich</td><td>block</td>
+<td> nicht semantisch</td></tr>
+<tr><td>dl</td><td>Liste mit dt- und dd-Elementen, für Definitionslisten und Dialoge usw.</td>
+<td>block</td><td>semantisch</td></tr>
+<tr><td>dt</td><td>zu definierender Ausdruck in einer Definitionsliste, Sprechername in einem Dialog usw.</td>
+<td>block</td><td>semantisch</td></tr>
+<tr><td>em</td><td>emphatischer Ausdruck innerhalb eines Absatzes (z.B. überspitzte Formulierung)</td>
+<td>inline</td><td>semantisch</td></tr>
+<tr><td>fieldset</td><td>Gruppevon ELementen in einem Formular, Reiter in einem Dialog</td>
+<td>block</td><td>nicht semantisch</td></tr>
+<tr><td>form</td><td>Formular, Dialog</td><td>block</td><td>nicht semantisch</td></tr>
+<tr><td>h1 - h6</td><td>Überschrift 1. bis 6.Ordnung</td><td>block</td>
+<td>semantisch</td></tr>
+<tr><td>head</td><td>Kopfbereich eines HTML-Dokuments</td><td>Dokumentstrukturtag</td>
+<td>nicht semantisch</td></tr>
+<tr><td>hr</td><td>Trennlinie</td><td>block</td><td>nicht semantisch</td></tr>
+<tr><td>html</td><td>Dokumentelement von HTML-Dokumenten, schließt das gesamte Dokument ein</td>
+<td>Dokumentstrukturtag</td><td>nicht semantisch</td></tr>
+<tr><td>i</td><td>spezieller Ausdruck im Text,z.B. Fachterminus oder Idiom (Üblicherweise Kursiv dargestellt)</td>
+<td>inline</td><td>semantisch im Sinne der Erklärung</td></tr>
+<tr><td>img</td><td>Referenzierte und eingebettete Grafik</td><td>inline</td>
+<td>nicht semantisch</td></tr>
+<tr><td>input</td><td>Formularelement, verwendbar für diverse Typen wie Eingabefelder, Schaltflächen, Auswahlfelder usw.</td>
+<td>inline</td><td>nicht semantisch</td></tr>
+<tr><td>ins</td><td>eingefügter Inhalt (Änderungsmarkierung)</td>
+<td>inline</td><td>semantisch</td></tr>
+<tr><td>kbd</td><td>Darstellung eines über die Tastatur einzugebenden Textes im Text</td>
+<td>inline</td><td>semantisch</td></tr>
+<tr><td>label</td><td>Beschriftungstext eines Formularfeldes</td><td>inline</td>
+<td>nicht semantisch</td></tr>
+<tr><td>legend</td><td>Überschrift für eine fieldset-Gruppe von Elementen in einem Formular</td><td>-</td>
+<td>nicht semantisch</td></tr>
+<tr><td>li</td><td>Listenpunkt in einer ul-, ol- oder menu-Liste</td><td>block</td>
+<td>semantisch</td></tr>
+<tr><td>link</td><td>Logische Beziehungen der aktuellen Website zu anderen Webseiten</td><td>headertag</td>
+<td>nicht semantisch</td></tr>
+<tr><td>map</td><td>Bereich für verweis-sensitive Grafiken</td><td>inline</td>
+<td>nicht semantisch</td></tr>
+<tr><td>meta</td><td>Meta-Angabe fürnicht im Imhalt sichtbare Dokumentinformationen oder Anweisungen an den Webserver</td>
+<td>headertag</td><td>nicht semantisch</td></tr>
+<tr><td>noscript</td><td>Bereich für Inhalte, die angezeigt werden, wenn JavaScript imBrowser deaktiviert oder nicht verfügbar ist</td>
+<td>block</td><td>nicht semantisch</td></tr>
+<tr><td>object</td><td>eingebettetes Objekt, geeignet für spezielle Multimedia-Objekte, Java-Applets usw.</td>
+<td>inline</td><td>nicht semantisch</td></tr>
+<tr><td>ol</td><td>geordnete (nummerierte) Liste</td>
+<td>block</td><td>nicht semantisch</td></tr>
+<tr><td>optgroup</td><td>Gruppe von Auswahlmöglichkeiten in einer Auswahlliste</td>
+<td>-</td><td>nicht semantisch</td></tr>
+<tr><td>option</td><td>Auswahlmöglichkeit in einer Auswahlliste</td>
+<td>-</td><td>nicht semantisch</td></tr>
+<tr><td>p</td><td>Paragraph, Absatz</td>
+<td>block</td><td>semantisch</td></tr>
+<tr><td>param</td><td>Parameter eines Objektes bei object-Elementen</td>
+<td>-</td><td>nicht semantisch</td></tr>
+<tr><td>pre</td><td>Präformatierter Text (alleWhitespace-Zeichen werden im Browser so dargstellt wie im Text enthalten)</td>
+<td>block</td><td>semantisch</td></tr>
+<tr><td>q</td><td>wörtliche Rede in einem Text</td>
+<td>inline</td><td>semantisch</td></tr>
+<tr><td>samp</td><td>Beispieltext in einem dokumentierenden Text</td>
+<td>inline</td><td>semantisch</td></tr>
+<tr><td>script</td><td>Scriptbereich für JavaScript und andere Scriptsprachen</td>
+<td>inline bzw. headertag</td><td>nicht semantisch</td></tr>
+<tr><td>select</td><td>Auswahlliste in einem Formular</td>
+<td>inline</td><td>nicht semantisch</td></tr>
+<tr><td>small</td><td>kleiner dargestellter Text als Normalschrift</td>
+<td>inline</td><td>nicht semantisch</td></tr>
+<tr><td>span</td><td>allgemeiner Bereich innerhalb eines Absatzes</td>
+<td>inline</td><td>nicht semantisch</td></tr>
+<tr><td>strong</td><td>stark betonter Inhalt im Text</td>
+<td>inline</td><td>semantisch</td></tr>
+<tr><td>style</td><td>Bereich für Stylesheet-Definitionen, z.B. in CSS</td>
+<td>inline</td><td>nicht semantisch</td></tr>
+<tr><td>sub</td><td>tiefgestellter Text</td>
+<td>inline</td><td>nicht semantisch</td></tr>
+<tr><td>sup</td><td>hochgestellter Text</td><td>inline</td>
+<td>nicht semantisch</td></tr>
+<tr><td>table</td><td>Tabelle</td><td>block</td><td>nicht semantisch</td></tr>
+<tr><td>tbody</td><td>Tabellenkörper mit den eigentlichen Daten</td>
+<td>-</td><td>nicht semantisch</td></tr>
+<tr><td>td</td><td>Tabellenzellen</td><td>-</td><td>nicht semantisch</td></tr>
+<tr><td>textarea</td><td>mehrzeiliger Eingabenbereich in einem Formular</td>
+<td>inline</td><td>nicht semantisch</td></tr>
+<tr><td>tfoot</td><td>Fußbereich in einer tabelle, z.B. für summarische Daten</td>
+<td>-</td><td>nicht semantisch</td></tr>
+<tr><td>th</td><td>Tabellenkopfzeile</td><td>-</td><td>nicht semantisch</td></tr>
+<tr><td>title</td><td>Titel eines HTML-Dokuments</td>
+<td>headertag</td><td>nicht semantisch</td></tr>
+<tr><td>tr</td><td>Tabellenzeile</td><td>-</td><td>nicht semantisch</td></tr>
+<tr><td>tt</td><td>"Fernschreiber"-Text</td><td>inline</td><td>semantisch</td></tr>
+<tr><td>ul</td><td>unsortierte Liste (Aufzählliste)</td>
+<td>block</td><td>nicht semantisch</td></tr>
+<tr><td>var</td><td>variabler Name in einem dokumentierenden Text</td>
+<td>inline</td><td>semantisch</td></tr>
+</table>
+</div>
+</body>
+</html>
